<resources>

    <string name="app_name">Blooba Live Wallpaper</string>
    <string name="app_description">Friendly blob for your Android!</string>
    <string name="blooba_settings">Blooba Settings</string>
    <string name="general_settings">General</string>
    <string name="enabletouch_settings">Enable Touch</string>
    <string name="invertgravity_settings">Invert Gravity</string>
    <string name="quality_settings">Quality</string>
    <string name="quality_summary">Quality of blooba</string>
    <string name="size_settings">Size</string>
    <string name="size_summary">Size of blooba</string>
    <string name="speed_settings">Speed</string>
    <string name="speed_summary">Animation speed</string>
    <string name="relax_settings">Relax factor</string>
    <string name="relax_summary">Squishiness of the blooba</string>
    <string name="select_foreground">Select Foreground</string>
    <string name="select_foreground_summary">Blooba Foreground Bitmap</string>
    <string name="crop_foreground">Crop Image</string>
    <string name="crop_foreground_summary">Crop selected image</string>
    <string name="select_background">Select Background</string>
    <string name="select_background_summary">Blooba Foreground Bitmap</string>
    <string name="b_stars">Stars</string>
    <string name="b_beach">Beach</string>
    <string name="b_boards">Boards</string>
    <string name="b_green">Green</string>
    <string name="b_underwater">Underwater</string>
    <string name="f_earth">Earth</string>
    <string name="f_moon">Moon</string>
    <string name="f_bubble">Bubble</string>
    <string name="f_water">Water</string>
    <string name="f_kenny">Kenny</string>
    <string name="f_squishy">Squishy</string>
    <string name="f_basketball">Basketball</string>
    <string name="f_nemo">Nemo</string>
    <string name="f_america">America</string>
    <string name="f_bpink">Pink Balloon</string>
    <string name="f_bblack">Black Balloon</string>
    <string name="f_donut">Donut</string>
    <string name="f_penny">Penny</string>
    <string name="f_spider">Spider</string>
    <string name="own">From Gallery</string>
    <string name="error_crop">Cannot access storage space</string>

</resources>